# FitTude

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  db.sql  docker-compose.override.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  readme.md
API/: data_get_routes.py  data_post_routes.py  email_verify.py  main.py  post_routes.py  post_user_routes.py  schemas.py  user_post_routes.py  user_routes.py
API/Data_API/: data_get_routes.py  data_post_routes.py  data_put_routes.py
API/Database/: db.sql  db_mapping.py  db_utils.py  schemas.py  utils.py
API/Email/: email_verify.py
API/routes/: user_post_routes.py
Database/: db_mapping.py  db_utils.py
FItTudeMobile/: local.properties  settings.gradle.kts
FItTudeMobile/app/: build.gradle.kts
Html_Templates/: confirm_register.html  verify_email.html
Html_Templates/Email/: email_template.html
Html_Templates/Web_App/: test.html
Web_App/: package.json  tsconfig.json
Web_App/html/: dashboard.html  index.html
api/: .env.model  Dockerfile  __init__.py  email_verify.py  main.py  pyproject.toml
api/auth/: security.py  token.py
api/data_api/: data_get_routes.py  data_put_routes.py
api/database/: db_mapping.py  utils.py
api/routes/: __init__.py  data_delete_routes.py  data_get_routes.py  data_post_routes.py  data_put_routes.py  user_post_routes.py  user_routes.py
api/src/: __init__.py  config.py  connections.py  email_service.py  exceptions.py
api/src/models/: __init__.py  associations.py  base_models.py  equipment_models.py  exercise_models.py  muscle_group_models.py  muscle_models.py  split_set_report_models.py  user_models.py  usuario_models.py  workout_plan_models.py  workout_report_models.py  workout_split_models.py
api/src/repository/: muscle_group_repository.py  muscle_repository.py
api/src/routes/: __init__.py  data_delete_routes.py  data_get_routes.py  data_post_routes.py  data_put_routes.py  user_routes.py
api/src/schemas/: equipment_schemas.py  exercise_schemas.py  group_muscles_schemas.py  user_schemas.py  workout_plan_schemas.py  workout_report_split_schemas.py
api/src/security/: authentication.py  security.py
api/src/templates/: change_password.html  confirm_register.html
api/src/utils/: constraints.py  utils.py
api/tests/: conftest.py
api/tests/factories/: muscle_factory.py  muscle_group_factory.py
api/tests/integration/features/muscle/: test_muscle_repository.py
api/tests/integration/repository/: test_muscle_group_repository.py  test_muscle_repository.py
app/: .env.model  __init__.py  main.py  pyproject.toml
app/core/: authentication.py  authetication.py  config.py  email_service.py  exceptions.py  schemas.py  security.py  utils.py
app/database/: db_mapping.py  fittude_db.sql
app/models/: associations.py  equipment_models.py  (+8 more)
core/: __init__.py  authetication.py  config.py  connections.py  email_service.py  exceptions.py  schemas.py  security.py  utils.py
db-init/: init-test-db.sh
mobile/: app.json  package-lock.json  package.json  tailwind.config.js
templates/: change_password.html  confirm_register.html  verify_email.html
tests/: mocks.py
web/: active.html  aparelhos.html  appweb.html  configuracoes.html  dashboard.html  exercicios.html  grupamentos.html  index.html  ladingpage.html  landingpage.html  login.html  register.html  relatorios.html  signup.html  styles-responsive.css  styles.css
(+94 files in other folders)
