[tool.poetry]
name = "fittude"
version = "0.1.0"
description = ""
authors = ["Luiz Carlos Souza Garcia <lcsouzagarcia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
taskipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run_test = "fastapi dev ./api/main.py"
run_prod = "fastapi dev ./api/main.py