[tool.poetry]
name = "OVERLOAD"
version = "0.1.0"
description = "App para acompanhar a rotina de treinos"
authors = ["Luiz Souza <lcsouzagarcia@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "app"

[[tool.poetry.packages]]
include = "tests"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.139.0"}
sqlalchemy = "^2.0.51"
redis = "^8.0.1"
asyncpg = "^0.31.0"
argon2-cffi = "^25.1.0"
pyjwt = "^2.13.0"
psycopg2-binary = "^2.9.12"
fastapi-mail = "^1.6.5"
pytest-asyncio = "^1.4.0"
email-validator = "^2.3.0"
pytest = "^9.1.1"
pytest-async = "^0.1.1"
polyfactory = "^3.3.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.15.20"
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-tornasync = "^0.6.0.post2"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
test = "docker exec -t overload-backend pytest -v --maxfail=1"


[tool.ruff.lint]
select = ["I", "E", "F", "W", "C"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
cache_dir = "/tmp/.pytest_cache"